# Power

./: Cargo.toml
.cargo/: config.toml
client/: Cargo.toml
client/assets/animations/: Back.glb  Falling.glb  Jump.glb
client/src/: main.rs
client/src/plugins/: animations.rs  combatant.rs  connection.rs  mod.rs
client/src/systems/: camera.rs  mod.rs  states.rs
server/: Cargo.toml
server/src/: main.rs
server/src/plugins/: combatant.rs  connection.rs  mod.rs
shared/: Cargo.toml
shared/src/: lib.rs  protocol.rs
shared/src/plugins/: combatant.rs  mod.rs  shared.rs  statesmachine.rs
shared/src/systems/: characteractions.rs  charactercontroller.rs  mod.rs
