[package]
name = "shared"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
bevy = {workspace = true}
log = {workspace = true}
avian3d = {workspace = true}
lightyear = {workspace = true}
serde = {workspace = true}
leafwing-input-manager = {workspace = true}
